Add search and select area code contact info